--- a/src/app/private/containers/visitor/containers/index/nav-bar/nav-bar.component.html
+++ b/src/app/private/containers/visitor/containers/index/nav-bar/nav-bar.component.html
@@ -454,13 +454,13 @@
                                     style="background-image: url('assets/images/dropdown-header/city2.jpg');"></div>
                                 <div class="menu-header-content text-center text-white">
                                     <h6 class="menu-header-subtitle mt-0">
-                                        {{ 'Parishionals.ChooseLanguage' | translate }}
+                                        {{ 'Choisir la langue' | translate }}
                                     </h6>
                                 </div>
                             </div>
                         </div>
                         <h6 tabindex="-1" class="dropdown-header">
-                            {{ 'Parishionals.PopularLanguages' | translate }}
+                            {{ 'Langues' | translate }}
                         </h6>
                         <button type="button" tabindex="0" class="dropdown-item" (click)="changeLanguage('en')">
                             <span class="mr-3 opacity-8 flag large US"></span>
@@ -561,13 +561,13 @@
                                                             <div class="widget-heading">{{ showUserFirstAndLastName() }}
                                                             </div>
                                                             <div class="widget-subheading opacity-8">
-                                                                {{ 'Parishionals.Parishional' | translate }}
+                                                                {{ 'Profile' | translate }}
                                                             </div>
                                                         </div>
                                                         <div class="widget-content-right mr-2">
                                                             <button class="btn-pill btn-shadow btn-shine btn btn-focus"
                                                                 (click)="logout()">
-                                                                {{ 'Parishionals.Logout' | translate }}
+                                                                {{ 'Se Déconnecter' | translate }}
                                                             </button>
                                                         </div>
                                                     </div>
@@ -659,7 +659,7 @@
                                 {{ showUserFirstAndLastName() }}
                             </div>
                             <div class="widget-subheading" title="{{ 'Parishionals.Parishional' | translate }}">
-                                {{ 'Parishionals.Parishional' | translate }}
+                                {{ 'Profile' | translate }}
                             </div>
                         </div>
                         <div class="widget-content-right header-user-info ml-3">
