--- a/src/app/private/containers/visitor/containers/documents/archived-documents/archived-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/archived-documents/archived-documents.component.html
@@ -8,10 +8,9 @@
                             <i class="pe-7s-phone icon-gradient bg-premium-dark">
                             </i>
                         </div>
-                        <div><span class="text-success"><h4>Dossiers traites et archives</h4></span> <strong><h5>Ceci est votre espace de travail</h5></strong>
+                        <div><span class="text-success"><h4>{{ 'AcceptedDocument.Foldersintreatment' | translate }}</h4></span> <strong><h5>{{ 'AcceptedDocument.Workspace' | translate }}</h5></strong>
                             <div class="page-title-subheading">
-                                A partir de cette interface vous pouvez visualiser
-                                l'ensemble des dossiers pui ont ete traites puis acrhives
+                                {{ 'ArchivedDocument.ViewAllFoldersInterface' | translate }}
                             </div>
                         </div>
                     </div>
@@ -24,7 +23,7 @@
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
                     </span>
-                    <strong><u>Note sur la securite:</u> </strong>  toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite
+                    <strong><u>{{ 'ArchivedDocument.NoteSecurite1' | translate}}</u> </strong> {{ 'ArchivedDocument.NoteSecurite2' | translate}}
                 </div>
 
                 <!---->
@@ -32,7 +31,7 @@
                     <div class="main-card mb-3 card">
                         <div class="card-header">
                             <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
-                            Dossiers archive
+                            {{ 'ArchivedDocument.ArchivedFolders' | translate}}
                         </div>
                         <div class="card-body">
                 
@@ -41,11 +40,11 @@
                                     <tr>
                                         <th>#</th>
                                         <th>badge</th>
-                                        <th>nom</th>
-                                        <th>description</th>
-                                        <th>pieces jointe</th>
-                                        <th>date de soumission</th>
-                                        <th>Actions</th>
+                                        <th>{{ 'ArchivedDocument.Name' | translate}}</th>
+                                        <th>{{ 'ArchivedDocument.Description' | translate}}</th>
+                                        <th>{{ 'ArchivedDocument.JointFiles' | translate}}</th>
+                                        <th>{{ 'ArchivedDocument.SubmissionDate' | translate}}</th>
+                                        <th>{{ 'ArchivedDocument.Actions' | translate}}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -70,13 +69,13 @@
                                 <tfoot *ngIf="loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
                                         <div class="spinner-border spinner-sm">
-                                            <span class="sr-only">Patientez svp...</span>
+                                            <span class="sr-only">{{ 'ArchivedDocument.PleaseWait' | translate}}</span>
                                         </div>
                                     </td>
                                 </tfoot>
                                 <tfoot *ngIf="!loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
-                                        Liste vide
+                                        {{ 'ArchivedDocument.EmptyList' | translate}}
                                     </td>
                                 </tfoot>
                             </table>
