--- a/src/app/private/containers/visitor/containers/documents/accepted-documents/accepted-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/accepted-documents/accepted-documents.component.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="card-body">
                 
-                            <table id="example2" class="table table-hover table-striped table-bordered">
+                            <table id="example2" class="table table-hover table-striped table-bordered dataTables_wrapper dt-bootstrap4">
                                 <thead>
                                     <tr>
                                         <th>#</th>
