--- a/src/app/private/containers/visitor/containers/visitor-home/visitor-home.component.html
+++ b/src/app/private/containers/visitor/containers/visitor-home/visitor-home.component.html
@@ -32,7 +32,8 @@
                             <div class="card no-shadow rm-border bg-transparent widget-chart text-left">
                                 <div class="icon-wrapper rounded-circle">
                                     <div class="icon-wrapper-bg opacity-10 bg-success"></div>
-                                    <i class="lnr-laptop-phone text-dark opacity-8"></i></div>
+                                    <i class="lnr-laptop-phone text-dark opacity-8"></i>
+                                </div>
                                 <div class="widget-chart-content">
                                     <div class="widget-subheading">{{ 'VisitorHome.allOnWorkingFolders' | translate }}</div>
                                     <div class="widget-numbers text-success">{{ onWorkingFolders ? onWorkingFolders.length : 0 }}</div>
@@ -47,7 +48,7 @@
                                     <i class="lnr-screen text-white"></i></div>
                                 <div class="widget-chart-content">
                                     <div class="widget-subheading">{{ 'VisitorHome.allSubmittedFolders' | translate }}</div>
-                                    <div class="widget-numbers text-secondary"><span>{{ allFolders ? allFolders.length : 0 }}</span></div>
+                                    <div class="widget-numbers text-secondary">{{ allFolders ? allFolders.length : 0 }}</div>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +59,7 @@
                                     <i class="lnr-trash text-white"></i></div>
                                 <div class="widget-chart-content">
                                     <div class="widget-subheading">{{ 'VisitorHome.allRejectedFolders' | translate }}</div>
-                                    <div class="widget-numbers"><span>{{ rejectedFolders ? rejectedFolders.length : 0 }}</span></div>
+                                    <div class="widget-numbers">{{ rejectedFolders ? rejectedFolders.length : 0 }}</div>
                                 </div>
                             </div>
                             <div class="divider m-0 d-md-none d-sm-block"></div>
