--- a/src/app/private/containers/administrator/containers/create-folder/create-folder.component.html
+++ b/src/app/private/containers/administrator/containers/create-folder/create-folder.component.html
@@ -25,7 +25,7 @@
                     </h6>
                     <div>
                         <div class="alert alert-info fade show" role="alert">
-                            <strong><u>{{"CreateFolder.Note" | translate}}</u> </strong> {{"CreateFolder.SelectFile" | translate}} <i class="pe-7s-angle-right-circle"></i>
+                            <strong><u>{{"CreateFolder.Note" | translate}}</u> </strong> {{"CreateFolder.FileSelection" | translate}}<i class="pe-7s-angle-right-circle"></i>
                         </div>
                         <div *ngIf="isError" class="alert alert-danger alert-dismissible fade show" role="alert">
                             <strong>{{ message?.title }}: </strong>{{ message?.content }}
@@ -45,9 +45,9 @@
 
                                 <div class="col-md-12">
                                     <div class="position-relative form-group">
-                                        <label class="">Choisir le type du dossier<span style="color: red;">*</span> :</label>
+                                        <label class="">{{"CreateFolder.Select" | translate}}<span style="color: red;">*</span> :</label>
                                         <select class="form-control" formControlName='folder_type' (change)="onSelectFolderType($event)">
-                                            <option value="default" disabled selected hidden>selectionner le type de dossier a constituer</option>
+                                            <option value="default" disabled selected hidden>{{"CreateFolder.SelectFolderType" | translate}}</option>
                                             <option *ngFor="let item of folderTypes" value="{{ item?.id }}">{{ item?.name }}</option></select>
                                         <small class="form-text text-muted info-error info-error-danger"
                                             *ngIf="handleError?.folder_type">
@@ -62,11 +62,11 @@
                                             <div class="col-md-3 files" *ngFor="let item of selectedFolderType.file_types" > 
                                                 <div>
                                                     <div class="custom-checkbox custom-control">
-                                                        <input type="checkbox" [id]="formatCkeckBoxId(item.id)" class="custom-control-input" disabled>
+                                                        <input type="checkbox" [id]="formatCkeckBoxId(item.id)" class="custom-control-input" [checked]="item.checked" disabled>
                                                         <label class="custom-control-label" [for]="formatCkeckBoxId(item.id)">&nbsp;</label>
                                                     </div>
-                                                    <span style="font-weight: bold; width: 100%; display: flex;">{{ display(item.name) }}</span>
-                                                    <div class="font-icon-wrapper font-icon-lg" style="cursor: pointer;" title="cliquer selectioner une pièce jointe">
+                                                    <span style="font-weight: bold; width: 100%; display: flex;" class="{{ item.isError ? 'text-danger' : '' }} {{ item.isSuccess ? 'text-success' : '' }}">{{ display(item.name) }}</span>
+                                                    <div class="font-icon-wrapper font-icon-lg {{ item.isError ? 'bg-danger' : '' }} {{ item.isSuccess ? 'bg-success' : '' }}" style="cursor: pointer;" title="cliquer selectioner une pièce jointe">
                                                         <i class="pe-7s-paperclip icon-gradient bg-plum-plate" (click)="chooseFile(item.id)"></i>
                                                     </div>
                                                 </div>
@@ -92,12 +92,12 @@
                                                 <div class="widget-content-right">
                                                     <div class="text-muted opacity-6">
                                                         <span *ngIf="buildingFolderPoucentage < 100">
-                                                            Constitution du dossier 
+                                                            {{"CreateFolder.ConstitutionFolder" | translate}} 
                                                             ({{ filesList.length}}/
-                                                            <span class="text-danger">{{ fileTypesNumber }} </span> piece(s) jointe(s))
+                                                            <span class="text-danger">{{ fileTypesNumber }} </span> {{"CreateFolder.PieceJointes" | translate}} 
                                                         </span>
-                                                        <span *ngIf="buildingFolderPoucentage >= 100">Votre dossier est pret 
-                                                            <span>(<span class="text-success">{{ filesList.length}}</span> piece(s) jointe(s))</span>
+                                                        <span *ngIf="buildingFolderPoucentage >= 100">{{"CreateFolder.DossierPret" | translate}}  
+                                                            <span>(<span class="text-success">{{ filesList.length}}</span>  {{"CreateFolder.PieceJointes" | translate}})</span>
                                                             <button class="border-0 btn btn-outline-success" disabled>
                                                                 <i class="fa fa-check"></i>
                                                             </button>
@@ -117,11 +117,11 @@
 
                                 <div class="col-md-12">
                                     <div class="position-relative form-group mt-3">
-                                        <label class="">Saisir la description du contenu du dossier<span style="color: red;">*</span> :</label>
+                                        <label class="">{{"CreateFolder.DescriptionDossier" | translate}} <span style="color: red;">*</span> :</label>
                                         <textarea 
                                             class="form-control" 
                                             formControlName='description' 
-                                            placeholder="Veuillez ecrire une description precise du contenu de ce dossier"
+                                            placeholder="{{'CreateFolder.PlaceholderDescription'| translate}}"
                                             rows="4"></textarea>
                                         <small class="form-text text-muted info-error info-error-danger"
                                             *ngIf="handleError?.description">
@@ -132,19 +132,16 @@
 
                                 <div class="col-md-12">
                                     <div class="position-relative form-group mt-1">
-                                        <label class="">Saisir l'adresse email de l'utilisateur concerne<span style="color: red;">*</span> :</label>
+                                        <label class="">{{"CreateFolder.UserEmailAddr" | translate}}<span style="color: red;">*</span> :</label>
                                         <div class="alert alert-warning fade show mt-1 text-justify" role="alert">
                                             <strong><u>NB:</u> </strong> 
-                                            Vous devez saisir l'adresse email que cet utilisateur a choisit
-                                            lors de la creation de son compte, ainsi on pourra lui generer 
-                                            automatiquement un code lui permettant de suivre l'evolution du
-                                            dossier ainsi creer.  
+                                            {{"CreateFolder.NoteUserEmailAddr" | translate}}  
                                         </div>
                                         <input 
                                             type="text"
                                             class="form-control" 
                                             formControlName='user_email' 
-                                            placeholder="exemple: toto@gmail.com">
+                                            placeholder="{{'CreateFolder.PlaceHolderUserEmail' | translate}}">
                                         <small class="form-text text-muted info-error info-error-danger"
                                             *ngIf="handleError?.user_email">
                                             {{ handleError?.user_email }}
@@ -159,7 +156,7 @@
                                         class="btn-wide btn-md btn-shadow btn-hover-shine btn btn-danger"
                                         style="font-size: medium; padding: 8px;"
                                         (click)="reinitialiseForm()">
-                                        Annuler tout
+                                        {{"CreateFolder.Cancel" | translate}} 
                                     </button>
                                 </div>
                                 <div class="text-center col-md-6 mb-4" style="width: 100%;">
@@ -167,7 +164,7 @@
                                         class="btn-wide btn-shadow btn-hover-shine btn btn-md btn-success"
                                         style="justify-content: center; align-items: center; flex: 1;">
                                         <p *ngIf="!isLoading" style="font-size: medium; padding: 0px; margin: 2px;">
-                                            Creer le dossier </p>
+                                            {{"CreateFolder.Create" | translate}} </p>
                                         <div *ngIf="isLoading" style="padding: 15px; margin-left: 50%;">
                                             <div class="ball-scale-multiple">
                                                 <div style="background-color: white;"></div>
@@ -195,11 +192,11 @@
                                 {{ info?.description }} 
                             </p>
                             <p class="text-justify">
-                                <strong>NB: </strong> A ce type de dossiers on associe <span class="text-danger">{{ info?.file_number }}</span> piece(s) jointe(s)
-                                <span class="text-success">NB: </span> La taille maximale de pieces jointes associes a ce type de dossier 
-                                est de <span class="text-danger">{{ info?.max_file_size }}</span>
+                                <strong>NB: </strong> {{"CreateFolder.AssociatedFolders" | translate}} <span class="text-danger">{{ info?.file_number }}</span> {{"CreateFolder.PieceJointes" | translate}}
+                                <span class="text-success">NB: </span> {{"CreateFolder.InfoFileSize" | translate}}
+                                {{"CreateFolder.Is" | translate}} <span class="text-danger">{{ info?.max_file_size }}</span>
                             </p>
-                            <p class="text-justify"><strong>Caracteristiques</strong> des pieces a associer au type de dossier choisi: </p>
+                            <p class="text-justify"><strong>{{"CreateFolder.Caracteristics" | translate}}</strong> {{"CreateFolder.AssociatedFiles" | translate}} </p>
 
                             <u class="todo-list-wrapper list-group list-group-flush">
                                 <li class="list-group-item" *ngFor="let item of selectedFolderType.file_types">
@@ -207,9 +204,9 @@
                                     <div class="widget-content p-0">
                                         <div class="widget-content-wrapper">
                                             <div class="widget-content-left mr-2">
-                                                <strong class="mr-2">Nom: </strong><span class="text-secondary">{{ item?.name }}</span><br>
-                                                <strong class="mr-2">Format: </strong><span class="text-secondary">{{ item?.file_type }}</span><br>
-                                                <strong class="mr-1">Taille max du fichier: </strong><span class="text-secondary">{{ computeSize(item?.max_size) }}</span>
+                                                <strong class="mr-2">{{"CreateFolder.Name" | translate}} </strong><span class="text-secondary">{{ item?.name }}</span><br>
+                                                <strong class="mr-2">{{"CreateFolder.Format" | translate}} </strong><span class="text-secondary">{{ item?.file_type }}</span><br>
+                                                <strong class="mr-1">{{"CreateFolder.MaxFileSize" | translate}} </strong><span class="text-secondary">{{ computeSize(item?.max_size) }}</span>
                                             </div>
                                         </div>
                                     </div>
