--- a/src/app/private/containers/superadmin/containers/index/left-side/left-side.component.html
+++ b/src/app/private/containers/superadmin/containers/index/left-side/left-side.component.html
@@ -37,7 +37,7 @@
                 <li class="mm-active">
                     <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
                         <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 1
+                        {{"LeftSide.TodayOne" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul class="today8 mm-collapse">
@@ -53,7 +53,7 @@
                 <li class="mm-active">
                     <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
                         <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 2
+                        {{"LeftSide.TodayTwo" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul class="today8 mm-collapse">
@@ -69,7 +69,7 @@
                 <li class="mm-active">
                     <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
                         <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 3
+                        {{"LeftSide.TodayThree" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul class="today8 mm-collapse">
@@ -85,7 +85,7 @@
                 <li class="mm-active">
                     <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
                         <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 4
+                        {{"LeftSide.TodayFour" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul class="today8 mm-collapse">
