--- a/src/app/private/containers/administrator/containers/create-folder/create-folder.component.html
+++ b/src/app/private/containers/administrator/containers/create-folder/create-folder.component.html
@@ -138,7 +138,7 @@
                                             {{"CreateFolder.NoteUserEmailAddr" | translate}}  
                                         </div>
                                         <input 
-                                            type="text"
+                                            type="email"
                                             class="form-control" 
                                             formControlName='user_email' 
                                             placeholder="{{'CreateFolder.PlaceHolderUserEmail' | translate}}">
@@ -148,7 +148,6 @@
                                         </small>
                                     </div>
                                 </div>
-
                                 
                                 <div class="text-center col-md-6" style="width: 100%;">
                                     <button
